<resources>
    <string name="ga_trackingId">UA-53684540-1</string>
    <string name="com.samsung.radio.MusicRadioMainActivity">MusicRadio MainScreen</string>
    <string name="com.samsung.radio.MusicRadioSplash">Splash Screen</string>
    <string name="mr_samsung_radio">MUSIC RADIO</string>
    <string name="mr_samsung_music">Samsung Music</string>
    <string name="mr_my_stations_genre_label">MY STATIONS</string>
    <string name="mr_app_name">MILK</string>
    <string name="mr_notification_signin_title">Sign in to %s</string>
    <string name="mr_notification_signin_text">Sync %s on all of your devices.</string>
    <string name="mr_terms_conditions_full_text">I have read and agree to the Terms and Conditions and the Privacy Policy.</string>
    <string name="mr_terms_conditions_title">Legal information</string>
    <string name="mr_agreement_terms_conditions">Terms and Conditions</string>
    <string name="mr_agreement_privacy_policy">Privacy Policy</string>
    <string name="mr_terms_conditions_view_more">View more</string>
    <string name="mr_negative_button">Cancel</string>
    <string name="mr_terms_conditions_positive_button">Agree</string>
    <string name="mr_yes_positive_button">OK</string>
    <string name="mr_station_name_title">Station name</string>
    <string name="mr_seeds_title">Station seeds</string>
    <string name="mr_add_new_seed_hint">Enter artist to add seed</string>
    <string name="mr_dormancy_label">Music paused</string>
    <string name="mr_dormancy_text">When there has been no recent activity, the music will be paused to save battery power. To continue listening, tap OK.</string>
    <string name="mr_dormancy_text_notification">The music has been paused to save battery power. Tap here to continue listening.</string>
    <string name="mr_song_label">song label</string>
    <string name="mr_artist_label">artist label</string>
    <string name="mr_btn_menu_indicator">menu indicator button</string>
    <string name="mr_btn_prev">prev button</string>
    <string name="mr_btn_play_pause">play pause button</string>
    <string name="mr_btn_options">options button</string>
    <string name="mr_btn_skip">skip button</string>
    <string name="mr_station_title">station title</string>
    <string name="mr_play_btn">play button</string>
    <string name="mr_pause_btn">pause button</string>
    <string name="mr_close_btn">close button</string>
    <string name="mr_unableto_favorite_song">Error occurred. Unable to add.</string>
    <string name="mr_unableto_unfavorite_song">Unable to remove from Favourite tracks.</string>
    <string name="mr_drawer_open">Open navigation drawer</string>
    <string name="mr_drawer_close">Close navigation drawer</string>
    <string name="mr_max_my_station_dialog_title">Maximum tracks reached</string>
    <string name="mr_max_my_station_dialog_message">The maximum number of stations (%d) has been reached. Remove a station from My stations.</string>
    <string name="mr_create_station_menu_item">Create station</string>
    <string name="mr_manage_stations_menu_item">Manage My stations</string>
    <string name="mr_customize_dial_menu_item">Customise dial</string>
    <string name="mr_favorite_songs_title">Favourite tracks</string>
    <string name="mr_play_history_menu_item">History</string>
    <string name="mr_settings_menu_item">Settings</string>
    <string name="mr_help_menu_item">Help</string>
    <string name="mr_favorite_song_menu_item">Add to Favourite tracks</string>
    <string name="mr_unfavorite_song_menu_item">Remove from Favourite tracks</string>
    <string name="mr_ban_song_menu_item">Block track</string>
    <string name="mr_play_station_menu_item">Play station</string>
    <string name="mr_add_to_my_stations_menu_item">Add to My Stations</string>
    <string name="mr_remove_from_my_stations_menu_item">Remove from My Stations</string>
    <string name="mr_create_song_station_menu_item">Create station from track</string>
    <string name="mr_view_station_details_menu_item">View station details</string>
    <string name="mr_share_menu_item">Share</string>
    <string name="mr_buy_song_menu_item">Purchase track</string>
    <string name="mr_favorite_songs_empty_message">To customise your stations, add tracks you like to your Favourite tracks.</string>
    <string name="mr_favorite_limit_text">The maximum number of favourite tracks (%d) has been reached. Your oldest favourite track will be removed.</string>
    <string name="mr_customised_dial_required">Customised dial required.</string>
    <string name="mr_history_empty_message">After you listen to your tracks, they will be shown here.</string>
    <string name="mr_customize_dial_dialog_title">Customise dial</string>
    <string name="mr_customize_dial_dialog_message">Personalise the dial with your favourite genres.</string>
    <string name="mr_customize_dial_dialog_positive_button">Customise dial</string>
    <string name="mr_add_more_artists_dialog_title">Add artists or tracks</string>
    <string name="mr_add_more_artists_dialog_message">Customise your station by adding artists or tracks.</string>
    <string name="mr_add_more_artists_dialog_positive_button">Add</string>
    <string name="mr_confirm_remove_my_station_dialog_title">Remove station</string>
    <string name="mr_confirm_remove_my_station_dialog_message">Your customised station will be deleted.</string>
    <string name="mr_removed_my_stations">Removed from My stations.</string>
    <string name="mr_unableto_remove_from_mystation">Unable to remove from My stations.</string>
    <string name="mr_added_my_stations">Added to My Stations.</string>
    <string name="mr_unableto_add_to_mystation">Unable to add to My Stations.</string>
    <string name="mr_added_favorite_songs">Added to Favourite tracks.</string>
    <string name="mr_removed_favorite_songs">Removed from Favourite tracks.</string>
    <string name="mr_banned_song_from_station">Track blocked on this station.</string>
    <string name="mr_undo">Undo</string>
    <string name="mr_ban_cancelled">Track unblocked.</string>
    <string name="mr_unable_to_block_track">Unable to block track.</string>
    <string name="mr_removed_station_dialog_title">Station removed</string>
    <string name="mr_removed_custom_station_dialog_message">This station has been removed.</string>
    <string name="mr_removed_spotlight_station_dialog_message">This station is no longer available.</string>
    <string name="mr_menu_list_item_action_button">menu list item action button</string>
    <string name="mr_menu_header_action_button">menu header action button</string>
    <string name="mr_favorite_songs_list_header_menu_option_sortby_name">Sort A to Z</string>
    <string name="mr_favorite_songs_list_header_menu_option_sortby_date">Sort by date</string>
    <string name="mr_customize_dial_instructions">Choose which %d genres you would like to appear on the station dial</string>
    <string name="mr_max_genres_dialog_title">Maximum genres reached</string>
    <string name="mr_max_genres_dialog_message">The maximum number of genres (%d) has been reached. Remove a genre from the station dial.</string>
    <string name="mr_edit_station_menu_item">Edit Station</string>
    <string name="mr_reorder_stations_menu_item">Reorder</string>
    <string name="mr_done_button_text">Done</string>
    <string name="mr_duplicate_staton_name_title">Rename station</string>
    <string name="mr_rename_station_duplicate_name_message">The station name %s is already in use. Choose a different name.</string>
    <string name="mr_manage_stations_empty_message">Create a new station or add a station from the dial to customise your station list.</string>
    <string name="mr_unable_to_delete_seed">Unable to delete seed.</string>
    <string name="mr_unable_to_add_seed">Unable to add seed.</string>
    <string name="mr_empty_station_desc">A station description is not currently available.</string>
    <string name="mr_server_error">Server error.</string>
    <string name="mr_server_error_try_later">Server error occurred. Try again later.</string>
    <string name="mr_no_connection">No network connection.</string>
    <string name="mr_error_dialog_title">Error</string>
    <string name="mr_network_connection_disabled_check">There is no network connection currently available. Check your network settings and try again.</string>
    <string name="mr_content_download_error_msg">Network connection error. Unable to play station.</string>
    <string name="mr_streaming_already_used_msg">Application already in use. Only 1 device can stream at a time.</string>
    <string name="mr_err_header_streaming_already_used_msg">Application already in use</string>
    <string name="mr_err_body_streaming_already_used_msg">Only 1 device can stream at a time. Try again in 10 minutes.</string>
    <string name="mr_geo_ip_error_title">Unsupported country or location</string>
    <string name="mr_geo_ip_error_msg">This application is not available in your country or location.</string>
    <string name="mr_account_removed_title">Account removed</string>
    <string name="mr_exiting_app">Your account has been removed. %s will be closed.</string>
    <string name="mr_logged_out_msg">You have been signed out. Please sign in to access your History, Favorites and My Stations.</string>
    <string name="mr_service_busy">The service is busy. Try again in %d minutes.</string>
    <string name="mr_failed_to_sign_in">Failed to sign in. Try again later.</string>
    <string name="mr_settings_menu_title">Settings</string>
    <string name="mr_settings_account_title">Samsung account</string>
    <string name="mr_settings_account_signin">Sign in</string>
    <string name="mr_settings_account_details">Account details</string>
    <string name="mr_settings_subscription">Subscription</string>
    <string name="mr_settings_my_subscription">My subscription</string>
    <string name="mr_settings_data">Connect via mobile networks</string>
    <string name="mr_settings_audioquality_title">Audio quality</string>
    <string name="mr_settings_audioquality_message">Audio quality set to %d kbps.</string>
    <string name="mr_settings_audioquality_btn_standard">Standard</string>
    <string name="mr_settings_audioquality_btn_high">High</string>
    <string name="mr_settings_location_title">Allow application to use my location</string>
    <string name="mr_settings_location_btn_off">Off</string>
    <string name="mr_settings_location_btn_on">On</string>
    <string name="mr_settings_explicit_title">Explicit content</string>
    <string name="mr_settings_explicit_btn_off">Disable</string>
    <string name="mr_settings_explicit_btn_on">Enable</string>
    <string name="mr_settings_explicit_getting_age">Verifying age. Please wait...</string>
    <string name="mr_settings_explicit_restricted">You must be at least %d years old to enable explicit content.</string>
    <string name="mr_settings_explicit_signin_required">You must be at least %d years old to enable explicit content. Sign in to verify your age.</string>
    <string name="mr_settings_explicit_no_birthday">Age verification failed.</string>
    <string name="mr_settings_data_usage_warning_msg">Connecting via mobile networks may result in additional charges depending on your payment plan.</string>
    <string name="mr_empty_my_stations_dialog_title">My stations list empty</string>
    <string name="mr_empty_my_stations_dialog_message">A custom station will be created.</string>
    <string name="mr_empty_my_stations_dialog_positive_button">Create station</string>
    <string name="mr_station_added_dialog_title">Station added</string>
    <string name="mr_tutorial_btn_menu_guide">More</string>
    <string name="mr_tutorial_btn_pause_guide">Play/Pause</string>
    <string name="mr_tutorial_btn_skip_guide">Skip track</string>
    <string name="mr_tutorial_btn_previous_guide">Previous track</string>
</resources>