<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/mr_notification_framelayout" android:layout_width="@dimen/mr_notification_cover_art_dimen" android:layout_height="@dimen/mr_notification_cover_art_dimen">
        <ImageView android:id="@id/mr_notification_cover_art" android:background="@null" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/mr_rainbow_ring_notific" android:adjustViewBounds="true" />
        <ImageView android:background="@null" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/mr_rainbow_ring_notific" android:adjustViewBounds="true" />
    </FrameLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/mr_notification_linearlayout" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_weight="1.0">
        <TextView android:textAppearance="@style/mr_NotificationSongTextStyle" android:ellipsize="marquee" android:id="@id/mr_notification_song_title" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mr_samsung_radio" android:scrollHorizontally="true" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" android:contentDescription="@string/mr_song_label">
            <requestFocus />
        </TextView>
        <TextView android:textAppearance="@style/mr_NotificationArtistTextStyle" android:layout_gravity="left" android:id="@id/mr_notification_artist_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:singleLine="true" android:contentDescription="@string/mr_artist_label" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="fill_parent">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/mr_backskip_btn_prev_notif" android:background="@null" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="@dimen/mr_notification_player_backskip_btn_width" android:layout_height="fill_parent" android:src="@drawable/mr_btn_prev_notif" android:scaleType="center" android:contentDescription="@string/mr_btn_prev" />
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/mr_btn_playpause_notif" android:background="@null" android:focusable="true" android:clickable="true" android:layout_width="@dimen/mr_notification_player_btn_width" android:layout_height="fill_parent" android:src="@drawable/mr_btn_pause_notif" android:scaleType="center" android:contentDescription="@string/mr_btn_play_pause" />
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/mr_backskip_btn_playpause_notif" android:background="@null" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="@dimen/mr_notification_player_backskip_btn_width" android:layout_height="fill_parent" android:src="@drawable/mr_btn_pause_notif" android:scaleType="center" android:contentDescription="@string/mr_btn_play_pause" />
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/mr_btn_skip_notif" android:background="@null" android:focusable="true" android:clickable="true" android:layout_width="@dimen/mr_notification_player_btn_width" android:layout_height="fill_parent" android:src="@drawable/mr_btn_skip_notif" android:scaleType="center" android:contentDescription="@string/mr_btn_skip" />
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/mr_backskip_btn_skip_notif" android:background="@null" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="@dimen/mr_notification_player_backskip_btn_width" android:layout_height="fill_parent" android:src="@drawable/mr_btn_skip_notif" android:scaleType="center" android:contentDescription="@string/mr_btn_skip" />
        <ImageView android:id="@id/mr_btn_close_notif" android:background="@null" android:focusable="true" android:clickable="true" android:layout_width="@dimen/mr_notification_player_btn_width" android:layout_height="fill_parent" android:src="@drawable/mr_btn_close_notif" android:scaleType="center" android:contentDescription="@string/mr_close_btn" />
        <ImageView android:id="@id/mr_backskip_btn_close_notif" android:background="@null" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="@dimen/mr_notification_player_backskip_btn_width" android:layout_height="fill_parent" android:src="@drawable/mr_btn_close_notif" android:scaleType="center" android:contentDescription="@string/mr_close_btn" />
    </LinearLayout>
</LinearLayout>