<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/mr_settings_container" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textColor="@*android:color/white" android:gravity="center_vertical" android:id="@id/mr_settings_title_id" android:paddingLeft="9.0dip" android:layout_width="wrap_content" android:layout_height="@dimen/mr_drawer_menu_title_height" android:text="@string/mr_settings_menu_title" android:drawablePadding="7.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:drawableStart="@drawable/mr_icn_global_settings" />
    <View android:id="@id/mr_header_divider_line" android:background="@*android:color/white" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="7.0dip" android:layout_marginRight="7.0dip" android:layout_below="@id/mr_settings_title_id" android:alpha="0.4" />
    <ScrollView android:id="@id/mr_settings_scrollview" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/mr_header_divider_line">
        <RelativeLayout android:id="@id/mr_settings_scrollview_container" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="18.0sp" android:textColor="@*android:color/white" android:id="@id/mr_subheader_samsung_account" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="7.0dip" android:layout_marginBottom="20.0dip" android:text="@string/mr_settings_account_title" />
            <LinearLayout android:orientation="vertical" android:id="@id/mr_action_button_container" android:paddingLeft="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/mr_subheader_samsung_account">
                <ProgressBar android:id="@id/user_loading_title" android:layout_width="wrap_content" android:layout_height="fill_parent" android:indeterminate="true" android:repeatCount="infinite" />
                <TextView android:textSize="17.0sp" android:textColor="@*android:color/white" android:gravity="center" android:id="@id/mr_sign_in_button" android:background="@drawable/mr_background_translucent_button" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="28.0dip" android:text="@string/mr_settings_account_signin" />
                <TextView android:textSize="15.0sp" android:textColor="@*android:color/white" android:gravity="center" android:id="@id/mr_account_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="13.0dip" />
                <TextView android:textSize="17.0sp" android:textColor="@*android:color/white" android:gravity="center" android:id="@id/mr_account_details" android:background="@drawable/mr_background_dialog_button" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mr_settings_account_details" />
            </LinearLayout>
            <View android:id="@id/mr_settings_divider_line_1" android:background="@*android:color/white" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="25.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="25.0dip" android:layout_marginBottom="20.0dip" android:layout_below="@id/mr_action_button_container" android:alpha="0.15" />
            <LinearLayout android:orientation="vertical" android:id="@id/mr_user_subsription_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/mr_help_page_horizontal_padding" android:layout_below="@id/mr_settings_divider_line_1">
                <TextView android:textSize="18.0sp" android:textColor="@*android:color/white" android:id="@id/mr_subheader_user_subscription_status" android:background="@drawable/mr_background_dialog_button" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <ListView android:id="@id/mr_user_subscription_info" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:listSelector="@*android:color/transparent" />
            </LinearLayout>
            <View android:id="@id/mr_settings_divider_line_2" android:background="@*android:color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="25.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="25.0dip" android:layout_marginBottom="20.0dip" android:layout_below="@id/mr_user_subsription_container" android:alpha="0.15" />
            <LinearLayout android:orientation="horizontal" android:id="@id/mr_data_container" android:paddingLeft="25.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/mr_settings_divider_line_2">
                <TextView android:textSize="18.0sp" android:textColor="@*android:color/white" android:layout_gravity="left|center" android:id="@id/mr_subheader_data" android:layout_width="250.0dip" android:layout_height="wrap_content" android:layout_marginRight="7.0dip" android:text="@string/mr_settings_data" />
                <CheckBox android:layout_gravity="right|center" android:id="@id/mr_checkbox_data" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/mr_btn_checkbox" />
            </LinearLayout>
            <View android:id="@id/mr_settings_divider_line_3" android:background="@*android:color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="25.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="25.0dip" android:layout_marginBottom="20.0dip" android:layout_below="@id/mr_data_container" android:alpha="0.15" />
            <TextView android:textSize="18.0sp" android:textColor="@*android:color/white" android:id="@id/mr_subheader_audio_quality" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginRight="7.0dip" android:layout_marginBottom="20.0dip" android:text="@string/mr_settings_audioquality_title" android:layout_below="@id/mr_settings_divider_line_3" />
            <RadioGroup android:orientation="vertical" android:id="@id/mr_radiogroup_audio_quality" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_below="@id/mr_subheader_audio_quality">
                <RadioButton android:textSize="17.0sp" android:textColor="@color/mr_setting_enabled_item" android:id="@id/mr_radiobutton_audio_quality_standard" android:layout_width="fill_parent" android:text="@string/mr_settings_audioquality_btn_standard" style="@style/mr_CustomRadioButton" />
                <View android:layout_width="fill_parent" android:layout_height="10.0dip" />
                <RadioButton android:textSize="17.0sp" android:textColor="@color/mr_setting_enabled_item" android:id="@id/mr_radiobutton_audio_quality_high" android:layout_width="fill_parent" android:text="@string/mr_settings_audioquality_btn_high" style="@style/mr_CustomRadioButton" />
            </RadioGroup>
            <View android:id="@id/mr_settings_divider_line_4" android:background="@*android:color/white" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="25.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="25.0dip" android:layout_marginBottom="20.0dip" android:layout_below="@id/mr_radiogroup_audio_quality" android:alpha="0.15" />
            <TextView android:textSize="18.0sp" android:textColor="@*android:color/white" android:id="@id/mr_subheader_location" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginRight="7.0dip" android:layout_marginBottom="16.0dip" android:text="@string/mr_settings_location_title" android:layout_below="@id/mr_settings_divider_line_4" />
            <RadioGroup android:orientation="vertical" android:id="@id/mr_radiogroup_location" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_below="@id/mr_subheader_location">
                <RadioButton android:textSize="17.0sp" android:textColor="@color/mr_setting_enabled_item" android:id="@id/mr_radiobutton_location_off" android:layout_width="fill_parent" android:text="@string/mr_settings_location_btn_off" android:layout_weight="1.0" style="@style/mr_CustomRadioButton" />
                <View android:layout_width="fill_parent" android:layout_height="10.0dip" />
                <RadioButton android:textSize="17.0sp" android:textColor="@color/mr_setting_enabled_item" android:id="@id/mr_radiobutton_location_on" android:layout_width="fill_parent" android:text="@string/mr_settings_location_btn_on" android:layout_weight="1.0" style="@style/mr_CustomRadioButton" />
            </RadioGroup>
            <View android:id="@id/mr_settings_divider_line_5" android:background="@*android:color/white" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="25.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="25.0dip" android:layout_marginBottom="20.0dip" android:layout_below="@id/mr_radiogroup_location" android:alpha="0.15" />
            <TextView android:textSize="18.0sp" android:textColor="@*android:color/white" android:id="@id/mr_subheader_explicit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginRight="7.0dip" android:layout_marginBottom="20.0dip" android:text="@string/mr_settings_explicit_title" android:layout_below="@id/mr_settings_divider_line_5" />
            <RadioGroup android:orientation="vertical" android:id="@id/mr_radiogroup_explicit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_below="@id/mr_subheader_explicit">
                <RadioButton android:textSize="17.0sp" android:textColor="@color/mr_setting_enabled_item" android:id="@id/mr_radiobutton_explicit_off" android:layout_width="fill_parent" android:text="@string/mr_settings_explicit_btn_off" android:layout_weight="1.0" style="@style/mr_CustomRadioButton" />
                <View android:layout_width="fill_parent" android:layout_height="10.0dip" />
                <RadioButton android:textSize="17.0sp" android:textColor="@color/mr_setting_enabled_item" android:id="@id/mr_radiobutton_explicit_on" android:layout_width="fill_parent" android:text="@string/mr_settings_explicit_btn_on" android:layout_weight="1.0" style="@style/mr_CustomRadioButton" />
            </RadioGroup>
            <View android:id="@id/mr_settings_divider_line_6" android:background="@*android:color/white" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="25.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="25.0dip" android:layout_marginBottom="20.0dip" android:layout_below="@id/mr_radiogroup_explicit" android:alpha="0.15" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>