<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/mr_menu_list_item_action_button" android:paddingLeft="16.0dip" android:paddingTop="10.0dip" android:paddingRight="16.0dip" android:paddingBottom="10.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:src="@drawable/mr_btn_list_context_menu_icon" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/mr_menu_list_item_action_button" />
    <View android:id="@id/mr_longTextAlignmentHelper" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_toLeftOf="@id/mr_menu_list_item_action_button" />
    <LinearLayout android:orientation="vertical" android:id="@id/mr_favorite_song_text_linearlayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignRight="@id/mr_longTextAlignmentHelper" android:layout_alignParentLeft="true">
        <TextView android:textSize="@dimen/mr_fontsize_17" android:textColor="#ffffffff" android:id="@id/mr_favorite_song_title" android:paddingLeft="25.0dip" android:paddingTop="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:contentDescription="@string/mr_song_label" />
        <TextView android:textSize="@dimen/mr_fontsize_15" android:textColor="#ffb6b6b6" android:id="@id/mr_favorite_song_sub_title" android:paddingLeft="25.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:contentDescription="@string/mr_artist_label" />
    </LinearLayout>
</RelativeLayout>