<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/mr_prev_tutorial_margin_bottom_player_btn_arrows"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/layout_arrows" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center_horizontal" android:layout_width="@dimen/mr_player_button_size_4_button" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="86.0dip" android:src="@drawable/mr_tips_tutorial_arrow_up" android:scaleType="fitXY" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:layout_width="@dimen/mr_player_button_size_4_button" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/mr_player_margin_button">
            <ImageView android:layout_width="wrap_content" android:layout_height="86.0dip" android:src="@drawable/mr_tips_tutorial_arrow_up" android:scaleType="fitXY" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:layout_width="@dimen/mr_player_button_size_4_button" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/mr_player_margin_button">
            <ImageView android:layout_width="wrap_content" android:layout_height="86.0dip" android:src="@drawable/mr_tips_tutorial_arrow_up" android:scaleType="fitXY" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:layout_width="@dimen/mr_player_button_size_4_button" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/mr_player_margin_button">
            <ImageView android:layout_width="wrap_content" android:layout_height="86.0dip" android:src="@drawable/mr_tips_tutorial_arrow_up" android:scaleType="fitXY" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/mr_prev_tutorial_margin_left_right_button_guide" android:layout_marginRight="@dimen/mr_prev_tutorial_margin_left_right_button_guide" android:layout_marginBottom="17.0dip" android:layout_above="@id/layout_arrows">
        <TextView android:textSize="16.0dip" android:textColor="@*android:color/white" android:gravity="center_horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="@dimen/mr_prev_tutorial_left_right_gap_button_guide" android:text="@string/mr_tutorial_btn_menu_guide" android:layout_weight="1.0" />
        <TextView android:textSize="16.0dip" android:textColor="@*android:color/white" android:gravity="center_horizontal" android:id="@id/previous_btn_guide_msg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="@dimen/mr_prev_tutorial_left_right_gap_button_guide" android:text="@string/mr_tutorial_btn_previous_guide" android:layout_weight="1.0" />
        <TextView android:textSize="16.0dip" android:textColor="@*android:color/white" android:gravity="center_horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="@dimen/mr_prev_tutorial_left_right_gap_button_guide" android:text="@string/mr_tutorial_btn_pause_guide" android:layout_weight="1.0" />
        <TextView android:textSize="16.0dip" android:textColor="@*android:color/white" android:gravity="center_horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/mr_tutorial_btn_skip_guide" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>